[project]
name = "tollbooth-oauth2-collector"
version = "0.2.4"
description = "Unauthenticated OAuth2 callback collector for Tollbooth MCP services"
authors = [{name = "Tollbooth OAuth2 Collector Contributors"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = ["mcp", "oauth2", "callback", "tollbooth", "fastmcp"]

dependencies = [
    # PINNED — the deploy resolves fresh on every redeploy; unpinned floors let the
    # transport framing (fastmcp) and the auth-code crypto (tollbooth-dpyc) drift.
    "fastmcp==3.1.0",
    "httpx>=0.27.0",
    "cryptography>=46.0.5",
    # Single source of the collector auth-code crypto contract
    # (encrypt_collector_code / decrypt_collector_code). MUST be installed — the
    # platform builds from requirements.txt, so it is pinned there too.
    "tollbooth-dpyc==0.63.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
